fix: alignment issues

--- a/src/less/includes/page.less
+++ b/src/less/includes/page.less
@@ -26,9 +26,10 @@
   }
 
   h1 {
-    font-size: 1.4em;
-    margin: 15px 0;
     text-align: center;
+    margin: 80px 0;
+    font-size: 42px;
+    font-family: @font-primary;
 
     &+h2,&+h3,&+h4 {
       margin-top: -15px;
