--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,12 +11,20 @@
 @avatar-shadow: @black 2px 1px 8px 1px;
 @avatar-border-radius: @avatar-radius @avatar-radius @avatar-radius @avatar-radius;
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
 .mw-body {
   .site();
 
   padding: 0;
   margin: 0;
   width: 100vw;
+  min-height: 100vh;
   font-family: @font-secondary;
   color: @black;
 
@@ -28,7 +36,7 @@
 
   .mw-header {
     line-height: 1em;
-    margin: 10px 0 5px 0;
+    padding: 10px 0 5px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -87,16 +95,7 @@
     width: 80%;
     margin: 0 auto;
 
-    .mw-page-title {
-      text-align: center;
-      margin: 80px 0;
-      font-size: 42px;
-      font-family: @font-primary;
-    }
-
     .mw-blog-list {
-
-
       .mw-blog-list-item {
 
       }
@@ -124,13 +123,6 @@
         margin-left: 15px;
         background-color: @black;
       }
-    }
-
-    .mw-page-title {
-      text-align: center;
-      margin: 20px 0 80px 0;
-      font-size: 42px;
-      font-family: @font-primary;
     }
   }
 
